--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,14 @@
 [core]
 	excludesfile = ~/.gitignore_global
+	autocrlf = input
 [user]
 	name = sunasun
 	email = sunasun526@gmail.com
 [commit]
 	template = ~/.stCommitMsg
 [alias]
-plog = log --pretty='format:%C(yellow)%h %C(green)%cd %C(reset)%s %C(red)%d %C(cyan)[%an]' --date=iso 
+plog = log --pretty='format:%C(yellow)%h %C(green)%cd %C(reset)%s %C(red)%d %C(cyan)[%an]' --date=iso
+glog = log --graph --date=short --decorate=short --pretty=format:'%Cgreen%h %Creset%cd %Cblue%cn %Cred%d %Creset%s'
 br = branch
 co = checkout
 ci = commit
